# yidika

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TASKS.md  acceptex_test.rs  bench_fib.yk  bun_bench.js  code.md  ctx_test.rs  data.json  err.txt  err2.txt  main.yk  min.yk  min_rust.rs  nb_accept.rs  raw_accept.rs  run_err.txt  session.ai  simple.yk  stderr.txt  test.yk  test_benchmark.ll  test_char_range.yk  test_char_range2.yk  test_class.yk  test_class10.yk  test_class2.yk  test_class3.yk  test_class4.yk  test_class5.yk  test_class6.yk  test_class7.yk  test_class8.yk  (+46 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.opencode/plans/: generic-structs-classes.md
benches/: interpret.rs
benchmarks/: bench_server.yk  run_bench_linux.sh  run_bench_windows.bat
docs/: comparison-python.md  comparison-ts.md
docs/dev/: ARCHITECTURE.md  EXECUTION_MODEL.md  FFI_ABI.md  MEMORY_MODEL.md  MODULE_SYSTEM.md  SPEC_MVP.md  SYNTAX_TREE.md  TYPE_SYSTEM.md
examples/: iocp_test.yk  server_feat_test.yk
examples/advanced/: test_json_import.yk  test_server_bp.yk
examples/basics/: main.yk  min.yk  print.yk  test.yk  test_benchmark.yk  test_fn_return.yk  test_while.yk  utils.yk
examples/class/: test_class11.yk  test_class12.yk  test_class13.yk  test_class2.yk  test_class9.yk  test_dataclass.yk  test_inherit.yk
examples/debug/: test_debug10.yk  test_debug2.yk  (+11 more)
runtime/: yk_rt.bc  yk_rt.c
src/: compat.rs  lib.rs  main.rs  stdlib.rs
(+51 files in other folders)
